# whisper-streamlit

./: Dockerfile  README.md  main.ipynb  main.py  mcpUtils.py  mcp_practice.py  pyproject.toml  whipser.ipynb  whisper_streamlit.py
chroma_db/: chroma.sqlite3
faiss_vector_store/: index.faiss  index.pkl
utils/: langchain_llms.py  langchain_rag.py
